--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -10,7 +10,7 @@ includes =
     irc3.plugins.command
     irc3.plugins.human
     nickserv
-autojoin =
+autojoins =
     irc3
 
 [irc3.plugins.command]
