add feeds plugin

--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -9,6 +9,8 @@ includes =
     irc3.plugins.userlist
     irc3.plugins.command
     irc3.plugins.human
+    irc3.plugins.uptime
+    irc3.plugins.feeds
     nickserv
 autojoins =
     irc3
@@ -20,3 +22,6 @@ guard = irc3.plugins.command.mask_based_policy
 [irc3.plugins.command.masks]
 *!~gael@amandine.bearstech.com = all_permissions
 
+[irc3.plugins.feeds]
+directory = ~/.irc3/feeds/
+github/irc3 = https://github.com/gawel/irc3/commits/master.atom#irc3
