--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,8 @@ recipe = zc.recipe.egg
 eggs =
     Sphinx
     irc3[test]
+    requests
+    feedparser
     aiohttp
     nose
 extra-paths = examples
