allow to log in files; allow custom feed format

--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -1,5 +1,5 @@
 [bot]
-nick = irc3
+nick = irc3_dev
 realname = irc3
 host = irc.freenode.net
 port = 7000
@@ -13,7 +13,7 @@ includes =
     irc3.plugins.feeds
     nickserv
 autojoins =
-    irc3
+    irc3-dev
 
 [irc3.plugins.command]
 cmd = !
