set default feed delay to 5mn

--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -23,6 +23,7 @@ guard = irc3.plugins.command.mask_based_policy
 *!~gael@amandine.bearstech.com = all_permissions
 
 [irc3.plugins.feeds]
+delay = 5
 directory = ~/.irc3/feeds/
 
 github/irc3 = https://github.com/gawel/irc3/commits/master.atom#irc3
