--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -27,4 +27,4 @@ delay = 5
 directory = ~/.irc3/feeds/
 
 github/irc3 = https://github.com/gawel/irc3/commits/master.atom#irc3
-github/irc3.fmt = [{name}] New commit by {author}: {title} - {link}
+github/irc3.fmt = [{name}] New commit by {e.author}: {e.title} - {e.link}
