add travis feed

--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -25,6 +25,10 @@ guard = irc3.plugins.command.mask_based_policy
 [irc3.plugins.feeds]
 delay = 1
 directory = ~/.irc3/feeds/
+hook = freenode_irc3.FeedsHook
 
-github/irc3 = https://github.com/gawel/irc3/commits/master.atom#irc3
-github/irc3.fmt = [{name}] New commit by {author}: {title} - {link}
+github/irc3 = https://github.com/gawel/irc3/commits/master.atom#irc3-dev
+github/irc3.fmt = [{feed.name}] New commit by {entry.author}: {entry.title} - {entry.link}
+
+travis/irc3 = https://api.travis-ci.org/repos/gawel/irc3/builds.atom#irc3-dev
+travis/irc3.fmt = [{feed.name}] {entry.title} - {entry.link}
