--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -30,5 +30,5 @@ hook = freenode_irc3.FeedsHook
 github/irc3 = https://github.com/gawel/irc3/commits/master.atom#irc3
 github/irc3.fmt = [{feed.name}] New commit by {entry.author}: {entry.title} - {entry.link}
 
-travis/irc3 = https://api.travis-ci.org/repos/gawel/irc3/builds.atom#irc3-dev
+travis/irc3 = https://api.travis-ci.org/repos/gawel/irc3/builds.atom#irc3
 travis/irc3.fmt = [{feed.name}] {entry.title} - {entry.link}
