add call_many; refactore feeds

--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -23,12 +23,16 @@ guard = irc3.plugins.command.mask_based_policy
 *!~gael@amandine.bearstech.com = all_permissions
 
 [irc3.plugins.feeds]
-delay = 5
 directory = ~/.irc3/feeds/
 hook = freenode_irc3.FeedsHook
+channels = irc3
+delay = 5
 
-github/irc3 = https://github.com/gawel/irc3/commits/master.atom#irc3
+github/irc3 = https://github.com/gawel/irc3/commits/master.atom
 github/irc3.fmt = [{feed.name}] New commit by {entry.author}: {entry.title} - {entry.link}
+github/irc3.delay = 2
 
-travis/irc3 = https://api.travis-ci.org/repos/gawel/irc3/builds.atom#irc3
+travis/irc3 = https://api.travis-ci.org/repos/gawel/irc3/builds.atom
 travis/irc3.fmt = [{feed.name}] {entry.title} - {entry.link}
+travis/irc3.channels = irc3
+travis/irc3.delay = 5
