--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -26,9 +26,17 @@ guard = irc3.plugins.command.mask_based_policy
 delay = 1
 directory = ~/.irc3/feeds/
 hook = freenode_irc3.FeedsHook
+channels = #irc3-dev
 
-github/irc3 = https://github.com/gawel/irc3/commits/master.atom#irc3-dev
+github/irc3 = https://github.com/gawel/irc3/commits/master.atom
 github/irc3.fmt = [{feed.name}] New commit by {entry.author}: {entry.title} - {entry.link}
+github/irc3.delay = 1
 
-travis/irc3 = https://api.travis-ci.org/repos/gawel/irc3/builds.atom#irc3-dev
+travis/irc3 = https://api.travis-ci.org/repos/gawel/irc3/builds.atom
 travis/irc3.fmt = [{feed.name}] {entry.title} - {entry.link}
+travis/irc3.channels = #irc3-dev
+travis/irc3.delay = 1
+
+pypi/irc3 = https://pypi.python.org/pypi?:action=rss
+pypi/irc3.fmt = {entry.title} is out! - {entry.link}
+pypi/irc3.delay = 3
