--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -30,9 +30,13 @@ delay = 5
 
 github/irc3 = https://github.com/gawel/irc3/commits/master.atom
 github/irc3.fmt = [{feed.name}] New commit by {entry.author}: {entry.title} - {entry.link}
-github/irc3.delay = 2
+github/irc3.delay = 5
 
 travis/irc3 = https://api.travis-ci.org/repos/gawel/irc3/builds.atom
 travis/irc3.fmt = [{feed.name}] {entry.title} - {entry.link}
 travis/irc3.channels = irc3
-travis/irc3.delay = 5
+travis/irc3.delay = 10
+
+pypi/irc3 = https://pypi.python.org/pypi?:action=rss
+pypi/irc3.fmt = {entry.title} is out! - {entry.link}
+pypi/irc3.delay = 60
