--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -6,6 +6,7 @@ port = 7000
 ssl = true
 includes =
     irc3.plugins.core
+    irc3.plugins.ctcp
     irc3.plugins.userlist
     irc3.plugins.command
     irc3.plugins.human
