--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -10,6 +10,7 @@ includes =
     irc3.plugins.userlist
     irc3.plugins.command
     irc3.plugins.human
+    irc3.plugins.search
     irc3.plugins.uptime
     irc3.plugins.feeds
     nickserv
