--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -2,8 +2,9 @@
 nick = irc3_dev
 realname = irc3
 host = irc.freenode.net
-port = 7000
-ssl = true
+#port = 7000
+#ssl = true
+port = 6667
 includes =
     irc3.plugins.core
     irc3.plugins.ctcp
