--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -2,9 +2,8 @@
 nick = irc3_dev
 realname = irc3
 host = irc.freenode.net
-#port = 7000
-#ssl = true
-port = 6667
+port = 7000
+ssl = true
 includes =
     irc3.plugins.core
     irc3.plugins.ctcp
