--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,7 @@ newest = false
 extensions = gp.vcsdevelop
 #vcs-extends-develop =
 parts = eggs
-develop = .
+develop = . pyst
 
 [eggs]
 recipe = zc.recipe.egg
