--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,14 +3,13 @@ newest = false
 extensions = gp.vcsdevelop
 #vcs-extends-develop =
 parts = eggs
-develop = . pyst
+develop = .
 
 [eggs]
 recipe = zc.recipe.egg
 eggs =
     Sphinx
     irc3[test]
-    pyst
     nose
 extra-paths = examples
 entry-points =
