caveralls do not like pypy

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,10 +1,10 @@
 [run]
 include =
-    */irc3/*
+    */irc3/*.py
+    */irc3/*/*.py
 omit =
     */tests*
     */docs/conf.py
-    */panoramisk.py
     */examples/social*
     */examples/mycommands*
     */examples/myextends*
