--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,10 @@
 [buildout]
 newest = false
 extensions = gp.vcsdevelop
-#vcs-extends-develop =
+vcs-extend-develop =
+    git+git@github.com:gawel/panoramisk.git#egg=panoramisk
 parts = eggs
+develop-dir = src
 develop = .
 
 [eggs]
