--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -13,6 +13,7 @@ includes =
     irc3.plugins.search
     irc3.plugins.uptime
     irc3.plugins.feeds
+    irc3.plugins.cron
     nickserv
     social
 autojoins =
