--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -14,10 +14,11 @@ includes =
     irc3.plugins.uptime
     irc3.plugins.feeds
     irc3.plugins.cron
+    freenode_irc3
     nickserv
     social
 autojoins =
-    irc3-dev
+    irc3
 
 [irc3.plugins.command]
 cmd = !
