--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -4,6 +4,7 @@ realname = irc3
 host = irc.freenode.net
 port = 7000
 ssl = true
+timeout = 180
 includes =
     irc3.plugins.core
     irc3.plugins.ctcp
