--- a/setup.cfg
+++ b/setup.cfg
@@ -8,5 +8,8 @@ include = docs
 with-coverage=1
 doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
 
+[flake8]
+exclude=bootstrap.py,./.tox/*,./src/*,./docs*
+
 [aliases]
 dev = develop easy_install irc3[test]
