--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,18 @@
 [tox]
-envlist = py27,py32,py33,py34
+envlist = py27,py32,py33,py34,flake8
 
 [testenv]
+whitelist_externals=
+    rm
 commands =
     rm -f .coverage
     python setup.py dev
     {envbindir}/nosetests []
 deps =
     nose
+
+[testenv:flake8]
+commands =
+    flake8
+deps =
+    flake8
