flake8 must ignore compat.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ with-coverage=1
 doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
 
 [flake8]
-exclude=bootstrap.py,./.tox/*,./src/*,./docs*
+exclude=bootstrap.py,./irc3/compat.py,./.tox/*,./src/*,./docs*
 
 [aliases]
 dev = develop easy_install irc3[test]
