--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -7,6 +7,7 @@ ssl = true
 includes =
     irc3.plugins.core
     irc3.plugins.ctcp
+    irc3.plugins.autojoins
     irc3.plugins.userlist
     irc3.plugins.command
     irc3.plugins.human
