--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -8,6 +8,7 @@ timeout = 180
 includes =
     irc3.plugins.core
     irc3.plugins.ctcp
+    irc3.plugins.autojoins
     irc3.plugins.userlist
     irc3.plugins.command
     irc3.plugins.human
@@ -18,8 +19,7 @@ includes =
     freenode_irc3
     nickserv
     social
-autojoins =
-    irc3
+autojoins = ##irc3_dev
 
 [irc3.plugins.command]
 cmd = !
@@ -32,7 +32,7 @@ guard = irc3.plugins.command.mask_based_policy
 delay = 1
 directory = ~/.irc3/feeds/
 hook = freenode_irc3.FeedsHook
-channels = #irc3-dev
+channels = ##irc3-dev
 
 github/irc3 = https://github.com/gawel/irc3/commits/master.atom
 github/irc3.fmt = [{feed.name}] New commit by {entry.author}: {entry.title} - {entry.link}
