moar twitter stuff

--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -7,6 +7,7 @@ ssl = true
 includes =
     irc3.plugins.core
     irc3.plugins.ctcp
+    irc3.plugins.cron
     irc3.plugins.autojoins
     irc3.plugins.userlist
     irc3.plugins.command
@@ -14,6 +15,7 @@ includes =
     irc3.plugins.search
     irc3.plugins.uptime
     irc3.plugins.feeds
+    freenode_irc3
     nickserv
     social
 autojoins =
