--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -7,17 +7,17 @@ ssl = true
 timeout = 180
 includes =
     irc3.plugins.core
-    irc3.plugins.ctcp
+#    irc3.plugins.ctcp
     irc3.plugins.autojoins
-    irc3.plugins.userlist
-    irc3.plugins.command
-    irc3.plugins.human
-    irc3.plugins.search
-    irc3.plugins.uptime
-    irc3.plugins.feeds
-    irc3.plugins.cron
+#    irc3.plugins.userlist
+#    irc3.plugins.command
+#    irc3.plugins.human
+#    irc3.plugins.search
+#    irc3.plugins.uptime
+#    irc3.plugins.feeds
+#    irc3.plugins.cron
     freenode_irc3
-    nickserv
+#    nickserv
     social
 autojoins = ##irc3_dev
 
