social plugin is now official

--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -15,9 +15,9 @@ includes =
     irc3.plugins.search
     irc3.plugins.uptime
     irc3.plugins.feeds
+    irc3.plugins.social
     freenode_irc3
     nickserv
-    social
 autojoins =
     irc3
 
