--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -16,9 +16,9 @@ includes =
 #    irc3.plugins.uptime
 #    irc3.plugins.feeds
 #    irc3.plugins.cron
+    irc3.plugins.social
     freenode_irc3
 #    nickserv
-    social
 autojoins = ##irc3_dev
 
 [irc3.plugins.command]
