userlist now also store user modes per channels

--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -7,9 +7,10 @@ ssl = true
 timeout = 180
 includes =
     irc3.plugins.core
-#    irc3.plugins.ctcp
+    irc3.plugins.userlist
+    irc3.plugins.ctcp
     irc3.plugins.autojoins
-#    irc3.plugins.userlist
+    irc3.plugins.log
 #    irc3.plugins.command
 #    irc3.plugins.human
 #    irc3.plugins.search
@@ -18,6 +19,7 @@ includes =
 #    irc3.plugins.cron
     irc3.plugins.social
     freenode_irc3
+    mybot
 #    nickserv
 autojoins = ##irc3_dev
 
