--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -1,9 +1,11 @@
 [bot]
 nick = irc3
 realname = irc3
+
 host = irc.freenode.net
 port = 7000
 ssl = true
+
 includes =
     irc3.plugins.core
     irc3.plugins.ctcp
@@ -18,17 +20,26 @@ includes =
     irc3.plugins.social
     freenode_irc3
     nickserv
+
+# channels to join
 autojoins =
     irc3
 
 [irc3.plugins.command]
+# command plugin configuration
+
+# set command char
 cmd = !
+# enable antiflood on commands
+antiflood = true
+# set guard policy
 guard = irc3.plugins.command.mask_based_policy
 
 [irc3.plugins.command.masks]
 *!~gael@amandine.bearstech.com = all_permissions
 
 [irc3.plugins.feeds]
+# feeds plugin configuration
 directory = ~/.irc3/feeds/
 hook = freenode_irc3.FeedsHook
 channels = irc3
