--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -21,10 +21,11 @@ includes =
     freenode_irc3
     mybot
 #    nickserv
+cmd = .
 autojoins = ##irc3_dev
 
 [irc3.plugins.command]
-cmd = !
+antiflood = true
 guard = irc3.plugins.command.mask_based_policy
 
 [irc3.plugins.command.masks]
