--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: python
-python:
-  - 2.7
-  - 3.3
 install:
-  - python setup.py dev
-  - pip install coveralls
-  - pip install flake8
+  - pip install tox coveralls
 script:
-  - nosetests
-  - flake8
+  - tox
 after_success:
   - coveralls
+env:
+  - TOXENV=py27
+  - TOXENV=py32
+  - TOXENV=py33
+  - TOXENV=py34
+  - TOXENV=flake8
