--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py32,py33,py34,flake8
+envlist = py27,py32,py33,py34,flake8,docs
 
 [testenv]
 whitelist_externals=
@@ -16,3 +16,9 @@ commands =
     flake8
 deps =
     flake8
+
+[testenv:docs]
+changedir = docs
+deps = sphinx
+commands =
+    sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
