--- a/tests/test.ini
+++ b/tests/test.ini
@@ -2,8 +2,8 @@
 nick = irc3
 realname = irc3
 
-host = irc.freenode.net
-port = 7000
+host = localhost
+port = 6667
 ssl = false
 
 includes =
@@ -17,11 +17,11 @@ includes =
     irc3.plugins.search
     irc3.plugins.uptime
     irc3.plugins.feeds
-    irc3.plugins.social
-    freenode_irc3
-    nickserv
 
 # channels to join
 autojoins =
     irc3
 
+[server]
+includes =
+    irc3d.plugins.core
