--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -4,19 +4,18 @@ realname = irc3
 host = irc.freenode.net
 port = 7000
 ssl = true
-timeout = 180
 includes =
     irc3.plugins.core
     irc3.plugins.userlist
     irc3.plugins.ctcp
     irc3.plugins.autojoins
     irc3.plugins.log
-#    irc3.plugins.command
-#    irc3.plugins.human
-#    irc3.plugins.search
-#    irc3.plugins.uptime
-#    irc3.plugins.feeds
-#    irc3.plugins.cron
+    irc3.plugins.command
+    irc3.plugins.human
+    irc3.plugins.search
+    irc3.plugins.uptime
+    irc3.plugins.feeds
+    irc3.plugins.cron
     irc3.plugins.social
     freenode_irc3
     mybot
