few improvement; add benches

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,6 +19,7 @@ extra-paths = examples
 entry-points =
     bot=bot:main
     mybot=mybot:main
+    benches=benches:main
     parse_rfc=irc3._parse_rfc:main
     gen_doc=irc3._gen_doc:main
 interpreter = py3
