switch to pytest; move asterisk stuff

--- a/.coveragerc
+++ b/.coveragerc
@@ -12,6 +12,8 @@ omit =
     */examples/nickserv*
     */examples/freenode*
     */irc3/third*
+    */irc3/_gen_doc*
+    */irc3/_parse_rfc*
     */site-packages*
     */lib/python*
     */lib-python*
