--- a/examples/benches.ini
+++ b/examples/benches.ini
@@ -12,6 +12,9 @@ includes =
 
 [server]
 servername = malkovitch
-client_amount = 10000
+client_amount = 500
 includes =
     irc3d.plugins.core
+
+[opers]
+gawel=passwd
