--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
-[nosetests]
-verbosity=2
-detailed-errors = True
-with-doctest = True
-doctest-extension = txt
-doctest-fixtures = _fixt
-include = docs
-with-coverage=1
-doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
+[pytest]
+addopts = --doctest-modules
+          --doctest-glob='*.rst'
+          --ignore=CHANGES.rst
+          --ignore=setup.py
+          --ignore=bootstrap.py
+          --ignore=examples/
+          --ignore=docs/conf.py
+          --ignore=irc3/_*.py
 
 [flake8]
 exclude=bootstrap.py,./irc3/compat.py,./.tox/*,./src/*,./docs*
