--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,10 @@ whitelist_externals=
 commands =
     rm -f .coverage
     python setup.py dev
-    {envbindir}/nosetests []
+    coverage run {envbindir}/py.test -xv []
+    coverage report -m
 deps =
-    nose
+    pytest
 
 [testenv:flake8]
 commands =
