--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,10 +7,11 @@ develop = .
 [eggs]
 recipe = zc.recipe.egg
 eggs =
+    docopt==0.6.1
+    chut
     Sphinx
     irc3[test]
     IPython
-    chut
     nose
 extra-paths = examples
 entry-points =
