commands can be coroutines

--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -14,14 +14,14 @@ includes =
     irc3.plugins.human
     irc3.plugins.search
     irc3.plugins.uptime
-    irc3.plugins.feeds
     irc3.plugins.cron
     irc3.plugins.social
     freenode_irc3
+    async_command
     mybot
 #    nickserv
 cmd = .
-autojoins = ##irc3_dev
+autojoins = #irc3_dev
 
 [irc3.plugins.command]
 antiflood = true
