remove makefile; use tox -e build. see #47

--- a/tox.ini
+++ b/tox.ini
@@ -24,3 +24,9 @@ changedir = docs
 deps = sphinx
 commands =
     sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
+
+[testenv:build]
+commands =
+    python -m irc3._parse_rfc
+    python -m irc3._gen_doc
+deps =
