--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -16,6 +16,7 @@ includes =
     irc3.plugins.uptime
     irc3.plugins.cron
     irc3.plugins.social
+    irc3.plugins.feeds
     freenode_irc3
     async_command
     mybot
@@ -34,7 +35,7 @@ guard = irc3.plugins.command.mask_based_policy
 delay = 1
 directory = ~/.irc3/feeds/
 hook = freenode_irc3.FeedsHook
-channels = ##irc3-dev
+channels = #irc3-dev
 
 github/irc3 = https://github.com/gawel/irc3/commits/master.atom
 github/irc3.fmt = [{feed.name}] New commit by {entry.author}: {entry.title} - {entry.link}
