allow to override host/port in command line

--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -29,7 +29,7 @@ antiflood = true
 guard = irc3.plugins.command.mask_based_policy
 
 [irc3.plugins.command.masks]
-*!~gael@amandine.bearstech.com = all_permissions
+gawel!*@*=all_permissions
 
 [irc3.plugins.feeds]
 delay = 1
