simple quickstart section

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -1,6 +1,6 @@
 [bot]
-nick = {nick}
-realname = {nick}
+nick = mybot
+realname = mybot
 
 host = localhost
 port = 6667
@@ -12,11 +12,11 @@ port = 6667
 
 includes =
     irc3.plugins.command
-    {nick}_plugin
+    mybot_plugin
 
-# the bot will join #{nick}_channel
+# the bot will join #mybot_channel
 autojoins =
-    {nick}_channel
+    mybot_channel
 
 [irc3.plugins.command]
 # command plugin configuration
@@ -30,5 +30,5 @@ guard = irc3.plugins.command.mask_based_policy
 [irc3.plugins.command.masks]
 # this section is used by the guard to secure the bot's command
 # change your nickname and uncomment the line below
-# {user}!*@* = all_permissions
+# gawel!*@* = all_permissions
 * = view
