clean build/deps

--- a/tox.ini
+++ b/tox.ini
@@ -2,17 +2,21 @@
 envlist = py27,py32,py33,py34,flake8,docs
 
 [testenv]
+skipsdist=true
+skip_install=true
 whitelist_externals=
     rm
 commands =
     rm -f .coverage
-    python setup.py dev
+    pip install -e .[test]
     coverage run {envbindir}/py.test -xv []
     coverage report -m
 deps =
     pytest
 
 [testenv:flake8]
+skipsdist=true
+skip_install=true
 basepython = python3.4
 commands =
     flake8
@@ -20,6 +24,8 @@ deps =
     flake8
 
 [testenv:docs]
+skip_install=false
+skipsdist=true
 changedir = docs
 deps = sphinx
 commands =
