--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -35,7 +35,7 @@ gawel!*@*=all_permissions
 delay = 1
 directory = ~/.irc3/feeds/
 hook = freenode_irc3.FeedsHook
-channels = #irc3-dev
+channels = irc3_dev
 
 github/irc3 = https://github.com/gawel/irc3/commits/master.atom
 github/irc3.fmt = [{feed.name}] New commit by {entry.author}: {entry.title} - {entry.link}
