--- a/tox.ini
+++ b/tox.ini
@@ -26,12 +26,17 @@ deps =
 [testenv:docs]
 skip_install=false
 skipsdist=true
+basepython = python3.4
 changedir = docs
 deps = sphinx
 commands =
+    rm -Rf {envtmpdir}/doctrees {envtmpdir}/html
     sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
 [testenv:build]
+skip_install=false
+skipsdist=true
+basepython = python3.4
 commands =
     python -m irc3._parse_rfc
     python -m irc3._gen_doc
