dcc chat work in real world

--- a/tests/test.ini
+++ b/tests/test.ini
@@ -17,6 +17,7 @@ includes =
     irc3.plugins.search
     irc3.plugins.uptime
     irc3.plugins.feeds
+    irc3.plugins.dcc
 
 # channels to join
 autojoins =
