add Dockerfile; do not kill all the bots

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ commands =
     coverage run {envbindir}/py.test -xv []
     coverage report -m
 deps =
+    coverage
     pytest
 
 [testenv:flake8]
