--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,6 +18,7 @@ entry-points =
     bot=bot:main
     mybot=mybot:main
     benches=benches:main
+    spy=spy:main
     parse_rfc=irc3._parse_rfc:main
     gen_doc=irc3._gen_doc:main
 interpreter = py3
