--- a/irc3/template/config.ini
+++ b/irc3/template/config.ini
@@ -15,6 +15,9 @@ includes =
     {nick}_plugin
 
 # the bot will join #{nick}_channel
+#
+# commas (,) will be replaced with pounds (#) when parsed
+# e.g. ,,my_channel -> ##my_channel
 autojoins =
     {nick}_channel
 
