use  in template

--- a/irc3/template/config.ini
+++ b/irc3/template/config.ini
@@ -15,8 +15,9 @@ includes =
     {nick}_plugin
 
 # the bot will join #{nick}_channel
+# {hash} is replaced by the # char
 autojoins =
-    {nick}_channel
+    {hash}{nick}_channel
 
 [irc3.plugins.command]
 # command plugin configuration
