dcc tests sucks with 3.5; skip for now

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ addopts = --doctest-modules
           --ignore=examples/
           --ignore=docs/conf.py
           --ignore=irc3/_*.py
+          --ignore=irc3/testing.py
 
 [flake8]
 exclude=bootstrap.py,./irc3/compat.py,./.tox/*,./src/*,./docs*
