update doc and examples

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -12,11 +12,17 @@ port = 6667
 
 includes =
     irc3.plugins.command
+#    irc3.plugins.uptime
+#    irc3.plugins.ctcp
     mybot_plugin
 
 # the bot will join #mybot_channel
+# ${hash} is replaced by the # char
 autojoins =
-    mybot_channel
+    ${hash}mybot_channel
+
+# limit number of lines sent per second. default to 3
+# max_lines_per_second = 10
 
 [irc3.plugins.command]
 # command plugin configuration
@@ -27,8 +33,11 @@ cmd = !
 # set guard policy
 guard = irc3.plugins.command.mask_based_policy
 
+# enable antiflood
+# antiflood = true
+
 [irc3.plugins.command.masks]
 # this section is used by the guard to secure the bot's command
 # change your nickname and uncomment the line below
-# gawel!*@* = all_permissions
+# mynick!*@* = all_permissions
 * = view
