refactor the way we send messages to handle max sendq in a clever way. we do not send more than 3 lines per second by default now

--- a/irc3/template/config.ini
+++ b/irc3/template/config.ini
@@ -12,12 +12,17 @@ port = 6667
 
 includes =
     irc3.plugins.command
+#    irc3.plugins.uptime
+#    irc3.plugins.ctcp
     {nick}_plugin
 
 # the bot will join #{nick}_channel
 # {hash} is replaced by the # char
 autojoins =
     {hash}{nick}_channel
+
+# limit number of lines sent per second. default to 3
+# max_lines_per_second = 10
 
 [irc3.plugins.command]
 # command plugin configuration
@@ -27,6 +32,9 @@ cmd = !
 
 # set guard policy
 guard = irc3.plugins.command.mask_based_policy
+
+# enable antiflood
+# antiflood = true
 
 [irc3.plugins.command.masks]
 # this section is used by the guard to secure the bot's command
