use flood_burst / flood_rate

--- a/irc3/template/config.ini
+++ b/irc3/template/config.ini
@@ -21,8 +21,13 @@ includes =
 autojoins =
     {hash}{nick}_channel
 
-# limit number of lines sent per second. default to 3
-# max_lines_per_second = 10
+# The maximum amount of lines irc3 sends at once.
+# Default to 4
+# flood_burst = 10
+
+# The number of lines per second irc3 sends after reaching the flood_burst limit.
+# Default to 1
+# flood_rate = 2
 
 [irc3.plugins.command]
 # command plugin configuration
@@ -32,9 +37,6 @@ cmd = !
 
 # set guard policy
 guard = irc3.plugins.command.mask_based_policy
-
-# enable antiflood
-# antiflood = true
 
 [irc3.plugins.command.masks]
 # this section is used by the guard to secure the bot's command
