rename realname to username and userinfo to realname

--- a/examples/benches.ini
+++ b/examples/benches.ini
@@ -4,8 +4,8 @@ username = malkovitch
 host = localhost
 port = 6667
 name = malkovitch
-realname = malkovitch
-userinfo = I'm the real John Malkovitch
+user = malkovitch
+realname = I'm the real John Malkovitch
 channel = head
 includes =
     benches
