--- a/examples/config.ini
+++ b/examples/config.ini
@@ -25,9 +25,14 @@ autojoins =
 # Default to 4
 # flood_burst = 10
 
-# The number of lines per second irc3 sends after reaching the flood_burst limit.
+# The number of lines per flood_rate_delay seconds irc3 sends after reaching
+# the flood_burst limit.
 # Default to 1
 # flood_rate = 2
+
+# The bot will send $flood_rate messages per $flood_rate_delay seconds
+# Default to 1
+# flood_rate_delay = 5
 
 [irc3.plugins.command]
 # command plugin configuration
