Add autojoin_delay configuration option

--- a/irc3/template/config.ini
+++ b/irc3/template/config.ini
@@ -21,6 +21,9 @@ includes =
 autojoins =
     {hash}{nick}_channel
 
+# Autojoin delay, disabled by default
+# float or int value
+# autojoin_delay = 3.1
 # The maximum amount of lines irc3 sends at once.
 # Default to 4
 # flood_burst = 10
