--- a/irc3/template/config.ini
+++ b/irc3/template/config.ini
@@ -26,7 +26,7 @@ autojoins =
 # autojoin_delay = 3.1
 
 # The maximum amount of lines irc3 sends at once.
-# Default to 4
+# Default to 4, set to 0 to disable
 # flood_burst = 10
 
 # The number of lines per $flood_rate_delay seconds irc3 sends after reaching
