enable fifo plugin for irc3[_dev]@freenode

--- a/examples/dev.ini
+++ b/examples/dev.ini
@@ -17,6 +17,7 @@ includes =
     irc3.plugins.cron
     irc3.plugins.social
     irc3.plugins.feeds
+    irc3.plugins.fifo
     freenode_irc3
     paginate
     mybot
@@ -49,3 +50,6 @@ travis/irc3.delay = 1
 pypi/irc3 = https://pypi.python.org/pypi?:action=rss
 pypi/irc3.fmt = {entry.title} is out! - {entry.link}
 pypi/irc3.delay = 3
+
+[irc3.plugins.fifo]
+runpath = /tmp/run/irc3
