--- a/examples/bot.ini
+++ b/examples/bot.ini
@@ -18,6 +18,7 @@ includes =
     irc3.plugins.uptime
     irc3.plugins.feeds
     irc3.plugins.social
+    irc3.plugins.fifo
     freenode_irc3
     nickserv
 
@@ -57,3 +58,6 @@ travis/irc3.delay = 10
 pypi/irc3 = https://pypi.python.org/pypi?:action=rss
 pypi/irc3.fmt = {entry.title} is out! - {entry.link}
 pypi/irc3.delay = 60
+
+[irc3.plugins.fifo]
+runpath = /tmp/run/irc3
