add sasl auth. see #109

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -10,6 +10,10 @@ port = 6667
 # uncomment this if you don't want to check the certificate
 # ssl_verify = CERT_NONE
 
+# uncomment this if you want to use sasl authentication
+# sasl_username = mybot
+# sasl_password = yourpassword
+
 includes =
     irc3.plugins.command
 #    irc3.plugins.uptime
@@ -21,12 +25,16 @@ includes =
 autojoins =
     ${hash}mybot_channel
 
+# Autojoin delay, disabled by default
+# float or int value
+# autojoin_delay = 3.1
+
 # The maximum amount of lines irc3 sends at once.
-# Default to 4
+# Default to 4, set to 0 to disable
 # flood_burst = 10
 
-# The number of lines per flood_rate_delay seconds irc3 sends after reaching
-# the flood_burst limit.
+# The number of lines per $flood_rate_delay seconds irc3 sends after reaching
+# the $flood_burst limit.
 # Default to 1
 # flood_rate = 2
 
