--- a/irc3/template/config.ini
+++ b/irc3/template/config.ini
@@ -10,6 +10,10 @@ port = 6667
 # uncomment this if you don't want to check the certificate
 # ssl_verify = CERT_NONE
 
+# uncomment this if you want to use sasl authentication
+# sasl_username = {nick}
+# sasl_password = yourpassword
+
 includes =
     irc3.plugins.command
 #    irc3.plugins.uptime
