--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,9 @@ skip_install=false
 skipsdist=true
 basepython = python3.4
 changedir = docs
-deps = sphinx
+deps =
+    sphinx
+    Pygments
 commands =
     rm -Rf {envtmpdir}/doctrees {envtmpdir}/html
     sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
