Add ${#} as a shorter alias for ${hash}

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -21,9 +21,9 @@ includes =
     mybot_plugin
 
 # the bot will join #mybot_channel
-# ${hash} is replaced by the # char
+# ${#} is replaced by the # char
 autojoins =
-    ${hash}mybot_channel
+    ${#}mybot_channel
 
 # Autojoin delay, disabled by default
 # float or int value
