--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,15 @@
-language: python
-python: 3.5
 sudo: false
+language: python
+python:
+  - "3.3"
+  - "3.4"
+  - "3.5"
+  - "3.6"
 services:
   - redis-server
 install:
-  - pip install tox coveralls
+  - pip install tox-travis coveralls
 script:
   - tox
 after_success:
   - coveralls
-env:
-  - TOXENV=py33
-  - TOXENV=py34
-  - TOXENV=py35
-  - TOXENV=flake8
-  - TOXENV=docs
