note about hupper

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,7 +12,7 @@ eggs =
     Sphinx
     irc3[test]
     IPython
-    nose
+    hupper
 extra-paths = examples
 entry-points =
     bot=bot:main
@@ -22,10 +22,3 @@ entry-points =
     parse_rfc=irc3._parse_rfc:main
     gen_doc=irc3._gen_doc:main
 interpreter = py3
-
-[tests]
-recipe = zc.recipe.egg
-eggs =
-    irc3[test]
-dependent-scripts = true
-scripts = nosetests
