--- a/tests/test.ini
+++ b/tests/test.ini
@@ -18,6 +18,7 @@ includes =
     irc3.plugins.feeds
     irc3.plugins.dcc
     irc3.plugins.pager
+    irc3.plugins.web
 
 # channels to join
 autojoins =
