--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py33,py34,py35,py36,flake8,docs
+envlist = py34,py35,py36,flake8,docs
 
 [travis]
 python =
@@ -12,7 +12,7 @@ whitelist_externals=
     rm
 commands =
     rm -f .coverage
-    pip install -e .[test]
+    pip install -e .[test,web]
     coverage run {envbindir}/py.test -xv []
     coverage report -m
 deps =
