--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ addopts = --doctest-modules
           --ignore=irc3/testing.py
 
 [flake8]
-exclude=bootstrap.py,./irc3/compat.py,./.tox/*,./src/*,./docs*
+exclude=bootstrap.py,./irc3/compat.py,./.tox/*,./src/*,./docs*,./.eggs/
 
 [aliases]
 dev = develop easy_install irc3[test]
