--- a/examples/slack.ini
+++ b/examples/slack.ini
@@ -7,10 +7,8 @@ sasl_username = <username>
 sasl_password = <password>
 includes =
     irc3.plugins.slack
-autojoins =
-    ${#}salt
 [irc3.plugins.slack]
-token = <slackbottoken>
+token = <xoxb-slackbottoken>
 [irc3.plugins.slack.channels]
 <slackchannel1> =
     ${#}<ircchannel1>
