--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 sudo: false
 language: python
-python:
-  - "3.5"
-  - "3.6"
+
+matrix:
+    include:
+     - python: 3.5
+     - python: 3.6
+     - python: 3.7
+       dist: xenial
+
 services:
   - redis-server
 install:
