--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,16 @@ matrix:
 
 services:
   - redis-server
+
 install:
   - pip install tox-travis coveralls
+
 script:
   - tox
+
 after_success:
   - coveralls
+
+cache:
+  directories:
+    - $HOME/.cache/pip
