do not show builtins commands in help. fixed #167

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [tool:pytest]
-addopts = --doctest-modules
+addopts = -p no:warnings
+          --doctest-modules
           --doctest-glob='*.rst'
           --ignore=CHANGES.rst
           --ignore=setup.py
