--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py35,py36,py37,flake8,docs
 
 [travis]
 python =
-    3.5: py35, flake8, docs
+    3.6: py36, flake8, docs
 
 [testenv]
 skipsdist=true
@@ -12,17 +12,17 @@ whitelist_externals=
     rm
 commands =
     rm -f .coverage
-    pip install -e .[test,web]
     coverage run {envbindir}/py.test -xv []
     coverage report -m
 deps =
+    -e .[test,web]
     coverage
     pytest
 
 [testenv:flake8]
 skipsdist=true
 skip_install=true
-basepython = python3.5
+basepython = python3.6
 commands =
     flake8
 deps =
@@ -31,7 +31,7 @@ deps =
 [testenv:docs]
 skip_install=false
 skipsdist=true
-basepython = python3.5
+basepython = python3.6
 changedir = docs
 deps =
     sphinx
