--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,7 +5,7 @@ graft irc3
 graft irc3d
 graft tests
 include *.rst *.cfg *.ini *.txt
-global-exclude *.pyc
+global-exclude *.pyc *.swp
 global-exclude __pycache__
 include conftest.py
 exclude bootstrap.py
