--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ addopts = -p no:warnings
 
 [flake8]
 exclude=bootstrap.py,./irc3/compat.py,./.tox/*,./src/*,./docs*,./.eggs/
+ignore=W605
 
 [aliases]
 dev = develop easy_install irc3[test]
