add OUT_* events

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -54,5 +54,5 @@ guard = irc3.plugins.command.mask_based_policy
 [irc3.plugins.command.masks]
 # this section is used by the guard to secure the bot's command
 # change your nickname and uncomment the line below
-# gawel!*@* = all_permissions
+# mynick!*@* = all_permissions
 * = view
