--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,5 @@
 [tox]
-envlist = py35,py36,py37,flake8,docs
-
-[travis]
-python =
-    3.7: py37, flake8, docs
+envlist = py35,py36,py37,py38,flake8,docs
 
 [testenv]
 skipsdist=true
@@ -22,7 +18,7 @@ deps =
 [testenv:flake8]
 skipsdist=true
 skip_install=true
-basepython = python3.7
+basepython = python3.8
 commands =
     flake8
 deps =
@@ -31,7 +27,7 @@ deps =
 [testenv:docs]
 skip_install=false
 skipsdist=true
-basepython = python3.7
+basepython = python3.8
 changedir = docs
 deps =
     sphinx
@@ -43,7 +39,7 @@ commands =
 [testenv:build]
 skip_install=false
 skipsdist=true
-basepython = python3.7
+basepython = python3.8
 commands =
     python -m irc3._parse_rfc
     python -m irc3._gen_doc
