--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py36,py37,py38,py39,flake8,docs
+envlist = py35,py36,py37,py38,py39,py310,flake8,docs
 
 [testenv]
 skipsdist=true
