--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py35,py36,py37,py38,py39,py310,flake8,docs
+envlist = py37,py38,py39,py310,py311,flake8,docs
 
 [testenv]
 skipsdist=true
 skip_install=true
-whitelist_externals=
+allowlist_externals =
     rm
 commands =
     rm -f .coverage
