update gha versions

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ commands =
     coverage report -m
 deps =
     -e .[test,web]
+    -e git+https://github.com/Pylons/venusian.git\#egg=venusian
     coverage
     pytest
 
