many fixes for py311; always use os.sendfile in DCC since irc3 now require py37+

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [tool:pytest]
 addopts = -p no:warnings
+          -p no:unraisableexception
           --doctest-modules
           --doctest-glob='*.rst'
           --ignore=CHANGES.rst
