--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.7, 3.8, 3.9, "3.10", "3.11"]
+        python: ["3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v3
@@ -24,4 +24,4 @@ jobs:
         run: tox -e py
       - name: Run flake8 / docs
         run: tox -e flake8,docs
-        if: matrix.python == 3.8
+        if: matrix.python == 3.12
