--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [tool:pytest]
+asyncio_default_fixture_loop_scope=function
 addopts = -p no:warnings
           -p no:unraisableexception
           --doctest-modules
