--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37,py38,py39,py310,py311,flake8,docs
+envlist = py311,py312,flake8,docs
 
 [testenv]
 skipsdist=true
@@ -18,7 +18,7 @@ deps =
 [testenv:flake8]
 skipsdist=true
 skip_install=true
-basepython = python3.8
+basepython = python3.12
 commands =
     flake8
 deps =
@@ -27,7 +27,7 @@ deps =
 [testenv:docs]
 skip_install=false
 skipsdist=true
-basepython = python3.8
+basepython = python3.12
 changedir = docs
 deps =
     sphinx
@@ -39,7 +39,7 @@ commands =
 [testenv:build]
 skip_install=false
 skipsdist=true
-basepython = python3.8
+basepython = python3.12
 commands =
     python -m irc3._parse_rfc
     python -m irc3._gen_doc
