Replace setup.{cfg,py} with pyproject.toml
Remove Trove classifiers for specific Python 3 versions as redundant.

Replace `from aiohttp import wsgi` with aiohttp-wsgi.
aiohttp.wsgi was dropped in
https://github.com/aio-libs/aiohttp/issues/1108.

Test in Python 3.13.

This migration keeps tox.ini for two reasons:
1. tox only added support for native TOML configuration
   in recent version 4.21.
2. Flake8 doesn't support TOML configuration
   without a third-party package.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py311,py312,flake8,docs
+envlist = py311,py312,py313,flake8,docs
 
 [testenv]
 skipsdist=true
@@ -8,7 +8,7 @@ allowlist_externals =
     rm
 commands =
     rm -f .coverage
-    coverage run {envbindir}/py.test -xv []
+    coverage run {envbindir}/py.test -xv tests
     coverage report -m
 deps =
     -e .[test,web]
@@ -44,3 +44,13 @@ commands =
     python -m irc3._parse_rfc
     python -m irc3._gen_doc
 deps =
+
+[flake8]
+exclude =
+    ./irc3/compat.py
+    ./.tox/*
+    ./src/*
+    ./docs*
+    ./.eggs/
+    ./.venv/
+ignore = W605
